--- a/po/wesnoth-aoi/ko.po
+++ b/po/wesnoth-aoi/ko.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-05-30 20:47+0200\n"
-"PO-Revision-Date: 2010-11-26 20:22+0900\n"
+"PO-Revision-Date: 2011-09-28 13:00+0900\n"
 "Last-Translator: mistzone <drier22@gmail.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -337,9 +337,8 @@ msgstr "전하!"
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:216
-#, fuzzy
 msgid "Take... command... Drive them... away."
-msgstr "지휘를...맡아라... 저들을...쫓아내라."
+msgstr "지휘를... 맡아라... 저들을... 쫓아내라."
 
 #. [message]: speaker=narrator
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:220
@@ -352,15 +351,14 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:232
-#, fuzzy
 msgid ""
 "I’ve been bested, but the combat wasn’t fair... A thousand curses on you, "
 "withered coward! May you suffer... and when my master, Rualsha, finds you "
 "may he wipe your people from the face of this earth!"
 msgstr ""
-"난 패배했지만, 이건 정당한 전투가 아니었다...네게 끝없는 저주가 있을거다, 이 "
-"허약한 겁쟁이! 부디 네놈이 고통받기를...내 주인이신 Rualsha님이 널 찾아내는 "
-"순간 그분이 너희 민족을 이 땅에서 지워버리실 거다!"
+"난 패배했지만, 이건 정당한 전투가 아니었다... 네게 끝없는 저주가 있을거다, "
+"이 허약한 겁쟁이! 부디 네놈이 고통받기를... 내 주인이신 Rualsha님이 널 찾아내"
+"는 순간 그분이 너희 민족을 이 땅에서 지워버리실 거다!"
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:243
@@ -442,22 +440,19 @@ msgstr ""
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:138
-#, fuzzy
 msgid "When the fighting ends, I’ll have some answers. But for now—"
-msgstr "전투가 끝나면, 뭔가 답이 나오겠지. 하지만 우선은..."
+msgstr "전투가 끝나면, 뭔가 답이 나오겠지. 하지만 우선은—"
 
 #. [message]: id=Gharlsa
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:142
-#, fuzzy
 msgid "Gharlsa sees elves... yes... Fresh meat for wolves. Yes, yes..."
 msgstr ""
-"Gharlsa가 엘프들을 봐...그래...늑대들에게 줄 신선한 고기야. 그래, 그래..."
+"Gharlsa가 엘프들을 봐... 그래... 늑대들에게 줄 신선한 고기야. 그래, 그래..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:146
-#, fuzzy
 msgid "— let’s focus on the task at hand."
-msgstr "...눈앞의 과제에 집중해야겠군."
+msgstr "—눈앞의 과제에 집중해야겠군."
 
 #. [message]: role=Adviser
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:150
@@ -471,25 +466,22 @@ msgstr "보이는 것만으로 판단해선 안돼. 모두에게 조심하라고
 
 #. [message]: id=Gharlsa
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:165
-#, fuzzy
 msgid "Yes... yes... Slay them!"
-msgstr "그래...그래...놈들을 죽여!"
+msgstr "그래... 그래... 놈들을 죽여!"
 
 #. [message]: speaker=unit
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:176
-#, fuzzy
 msgid "Hurts... failed... Rualsha gonna be angry..."
-msgstr "아파...실패했어...Rualsha님이 화낼거야..."
+msgstr "아파... 실패했어... Rualsha님이 화낼거야..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:187
-#, fuzzy
 msgid ""
 "This... ‘Rualsha’ again. We need to forge ahead; the answers we seek are not "
 "here. Perhaps we will find them further north."
 msgstr ""
-"또...이 Rualsha군. 더 앞으로 진군해야한다. 우리가 찾는 해답은 이곳에 없는 것 "
-"같으니. 아마도 더 북쪽에서 그 답을 찾아야 할 것 같군."
+"또... 이 Rualsha군. 더 앞으로 진군해야한다. 우리가 찾는 해답은 이곳에 없는 "
+"것 같으니. 아마도 더 북쪽에서 그 답을 찾아야 할 것 같군."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:191
@@ -537,7 +529,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:68
-#, fuzzy
 msgid ""
 "Erlornas was near-certain they would find orcs there. No clan of dwarves "
 "would break their ancient treaties with the elves in this way; humans were "
@@ -549,7 +540,7 @@ msgstr ""
 "프 씨족도 엘프와 맺은 고대의 조약을 이런 식으로 깨뜨리진 않았다. 인간들은 파"
 "괴에 있어서는 절대... 그리 꼼꼼하지는 못했으며, 편안히 지내기에는 너무 춥고 "
 "눅눅한 이런 북녘에서 이정도의 짓을 벌일만큼 많은 숫자가 돌아다니지도 않았다. "
-"의문은 하나뿐이었다 - 과연 Rualsha를 찾아낼 수 있을 것인가?"
+"의문은 하나뿐이었다 — 과연 Rualsha가 저기 있을까?"
 
 #. [part]
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:72
@@ -628,25 +619,22 @@ msgstr ""
 
 #. [message]: id=Gnargha
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:198
-#, fuzzy
 msgid "You won... elf... But it changes... nothing... (<i>cough</i>)"
-msgstr "네 승리다... 엘프... 하지만 바뀌는건... 없다... (*쿨럭*)"
+msgstr "네 승리다... 엘프... 하지만 바뀌는건... 없다... (<i>쿨럭</i>)"
 
 #. [message]: id=Gnargha
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:202
-#, fuzzy
 msgid ""
 "We found the way... Now... we will come in numbers... (<i>cough</i>) you "
 "can’t imagine..."
 msgstr ""
-"우린 이제 길을... 찾았다... 우린 수도 없이 몰려올 것이다... (*쿨럭*) 네가 상"
-"상할 수도 없을만큼..."
+"우린 이제 길을... 찾았다... 우린 수도 없이 몰려올 것이다... (<i>쿨럭</i>) 네"
+"가 상상할 수도 없을만큼..."
 
 #. [message]: id=Gnargha
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:206
-#, fuzzy
 msgid "(<i>Cough</i>) I’ll be waiting... among the dead..."
-msgstr "(*쿨럭*) 죽은 자들 속에서... 기다리겠다..."
+msgstr "(<i>쿨럭</i>) 죽은 자들 속에서... 기다리겠다..."
 
 #. [message]: speaker=narrator
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:217
@@ -1120,14 +1108,13 @@ msgstr "보고를."
 
 #. [message]: role=Advisor
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:154
-#, fuzzy
 msgid ""
 "A warband of orcs, no women or children among them, besieges a tower. It’s "
 "of human design... but we are far from the lands granted to humans by "
 "treaty, my lord Erlornas."
 msgstr ""
 "여자와 아이는 없는 오크 전투부대가 탑을 포위하고 있습니다. 인간의 것으로 보입"
-"니다만...이곳은 우리가 인간에게 조약으로 허용한 땅보다 훨씬 먼 북쪽입니다, "
+"니다만... 이곳은 우리가 인간에게 조약으로 허용한 땅보다 훨씬 먼 북쪽입니다, "
 "Erlornas 전하."
 
 #. [message]: id=Erlornas
@@ -1175,17 +1162,15 @@ msgstr ""
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:178
-#, fuzzy
 msgid ""
 "Interesting... Go to my personal stores and bring me a bottle of wine. And a "
 "couple of glasses."
-msgstr "흥미롭군...내 개인 창고로 가서 와인 한병을 가져오게. 잔 두개도 같이."
+msgstr "흥미롭군... 내 개인 창고로 가서 와인 한병을 가져오게. 잔 두개도 같이."
 
 #. [message]: role=Advisor
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:182
-#, fuzzy
 msgid "... Glasses?"
-msgstr "...잔 두개요?"
+msgstr "... 잔 두개요?"
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:186
@@ -1216,13 +1201,12 @@ msgstr "얼마 후..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:240
-#, fuzzy
 msgid ""
 "So you decided to accept the invitation. Good. Welcome, I am lord Erlornas "
 "of Wesmere. I find your presence here... surprising."
 msgstr ""
-"그대는 초대를 받아들이기로 한 모양이군. 좋아. 환영하네. 나는 Wesmere의 군주 "
-"Erlornas네. 여기서 그대의 존재를 느꼈지...놀랍군."
+"그대는 초대를 받아들이기로 한 모양이군. 좋아. 환영하네, 나는 Wesmere의 군주 "
+"Erlornas네. 여기서 그대의 존재를 느꼈지... 놀랍군."
 
 #. [message]: speaker=Linaera
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:244
@@ -1278,14 +1262,13 @@ msgstr ""
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:306
-#, fuzzy
 msgid ""
 "And that is well ended. But, Linaera, there is somewhat else that concerns "
 "me. You are a mage; do you not feel something... wrong... to the east of "
 "here?"
 msgstr ""
 "일이 잘 끝났군. 그런데 Linaera, 뭔가 내 심기를 거스르는 것이 있네. 그대는 마"
-"법사이지. 뭔가...안좋은 것이...동쪽에서 느껴지지 않나?"
+"법사이지. 뭔가... 안좋은 것이... 동쪽에서 느껴지지 않나?"
 
 #. [message]: speaker=Linaera
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:310
